# AD2C-Adaptive-Divesity-Control

./: .gitignore  AD2C.yml  README.md  het_control_experiment.yaml  pyproject.toml  requirements.txt  runn.txt  setup.py
AD2C/: callback.py  callback123.py  dispersion_ippo.py  dispersion_run.py  esc_model_run.py  gradieant.ipynb  multi_run.py  multi_snd_run.py  multi_traj.py  run.py  run_multi.py  snd.py  snd_esc_run.py  snd_run.py  snd_run.py.save  work.ipynb
AD2C.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Saved Pairwise Diversities/: agent_distances_ep0_n5.csv  agent_distances_ep10_n5.csv  agent_distances_ep11_n5.csv  agent_distances_ep12_n5.csv  agent_distances_ep13_n5.csv  agent_distances_ep14_n5.csv  agent_distances_ep15_n5.csv  agent_distances_ep16_n5.csv  agent_distances_ep17_n5.csv  agent_distances_ep18_n5.csv  agent_distances_ep19_n5.csv  agent_distances_ep1_n5.csv  agent_distances_ep20_n5.csv  agent_distances_ep21_n5.csv  agent_distances_ep22_n5.csv  agent_distances_ep23_n5.csv  agent_distances_ep24_n5.csv  agent_distances_ep25_n5.csv  agent_distances_ep26_n5.csv  agent_distances_ep27_n5.csv  agent_distances_ep28_n5.csv  agent_distances_ep29_n5.csv  agent_distances_ep2_n5.csv  agent_distances_ep30_n5.csv  agent_distances_ep31_n5.csv  agent_distances_ep32_n5.csv  agent_distances_ep33_n5.csv  agent_distances_ep34_n5.csv  agent_distances_ep35_n5.csv  agent_distances_ep36_n5.csv  agent_distances_ep37_n5.csv  agent_distances_ep38_n5.csv  agent_distances_ep39_n5.csv  agent_distances_ep3_n5.csv  agent_distances_ep40_n5.csv  agent_distances_ep41_n5.csv  agent_distances_ep42_n5.csv  (+20 more)
het_control/: callback.py
(+46 files in other folders)
