[project]
name = "AD2C"
version = "0.1.0"
description = "Controlling diversity using Es controller"
requires-python = ">=3.8"
dependencies = [
    "cloudpickle~=3.0",
    "ConfigArgParse~=1.7",
    "cvxpy~=1.4",         # Version 1.7 requires Python 3.10+
    "cvxpylayers~=0.1",
    "dm_env~=1.6",
    "GitPython~=3.1",
    "gym-super-mario-bros~=7.4",
    "h5py~=3.10",         # Version 3.10 is the last to support Python 3.9
    "hydra-core~=1.3",
    "ipython~=8.12",
    "jax~=0.4",           # Version 0.4.x is compatible with Python 3.9
    "matplotlib~=3.7",
    "minari~=0.5",
    "mo-gymnasium~=1.3",
    "moviepy~=2.0",
    "networkx~=3.2",
    "numpy~=1.26",        # Version 2.x dropped support for older Pythons
    "omegaconf~=2.3",
    "pandas~=2.0",
    "Pillow~=10.0",
    "pyglet~=1.5",
    "PyOpenGL~=3.1",
    "pytest~=8.0",
    "pytorch-sphinx-theme~=0.0",
    "PyYAML~=6.0",
    "scikit-learn~=1.3",  # Newer versions require Python 3.10+
    "scipy~=1.11",        # Newer versions require Python 3.10+
    "seaborn~=0.13",
    "setuptools~=69.0",   # Version 80+ is very new
    "six~=1.16",
    "stable-baselines3~=2.3",
    "submitit~=1.5",
    "tenacity~=8.2",
    "tikzplotlib~=0.10",
    "torch~=1.13",
    "torchvision",        # Let torch decide which torchvision it needs
    "torch_geometric~=2.5",
    "torchrec~=0.6",      # Newer versions require Python 3.10+
    "torchsnapshot~=0.1",
    "tqdm~=4.66",
    "transformers~=4.36", # Newer versions require Python 3.10+
    "treevalue",
]